﻿10.13 -> 10.14
XX/XX/2018

Balance:
 • T1 air transports vertical speed reduced 25% + cruisealtitude 65 -> 70
 • Arm and Core vehicles : scouts/light tanks/medium tanks +10% turnrate
 • Stumpy Raider Bulldog and Reaper -5% maxpseed and +5% metal cost
 • Penetrator and Banisher -5% maxspeed

Other:
 • Removed unba commanders modoption
 • Fixed continuous aiming change always being able to fire, even when turret was way off
 • Made Anti Aliasing options slider work again, and limited max value of 4 (MSAA is used instead of FSAA)
 • New flak explosion effect + custom crashing airplane smoke trails
 

10.12 -> 10.13
29/09/2018

Balance:
 • Reverted the global 10% reclaimspeed nerf (see 10.00)

Other:
 • Fixed "Set Target Default" erroring at game start
 • Fixed some missing water-splash effects
 • Fixed: The new "Contain mouse" option should show up in the options this time
 • Fixed: Auto disabling map widgets: *Mearth Location Tags*1.0 (render errors) and "Ambient player" (DsD v8)


10.11 -> 10.12
16/09/2018

IMPORTANT: Removed support for older engine versions, use 104.0.1.567 or newer.

Balance:
 • Testing splitting ballistic missiles for T2 missile ships (splits into 6 (arm) or 8(core) projectiles)
 • Continuous aiming: units readjust their aim much more often + start aiming when enemy is still at maxrange + 10%
 • EMP spider auto heals itself with 15hp per second (ba9.37 had 30 before it was removed)
 • Ships/Sea wrecks durability increased ("health" + 100%)
 • Floating mine AoE reduced 30%, damages to subs from 1750 -> 1100, edge effectiveness from 1.00 -> 0.65
 • Toaster range 1335 -> 1390, Ambusher range 1320 -> 1380
 • MERL range 1215 -> 1300, Diplomat range 1240 -> 1310

Other:
 • Engine replacement trees can be set on fire! The fire can propagate and even cause slight damages.
 • Added option "Resolution" (might freeze engine... in windowed mode)
 • Added option "Move Window Position"
 • Added option "Contain mouse"