@@ -2,6 +2,7 @@
 XX/XX/2018
 
 Balance:
+ • Comblast lethal range to other commanders extended (35%)
  • T1 air transports vertical speed reduced 25% + cruisealtitude 65 -> 70
  • Arm and Core vehicles : scouts/light tanks/medium tanks +10% turnrate
  • Stumpy Raider Bulldog and Reaper -5% maxpseed and +5% metal cost
